--- a/app/views/restaurantes/edit.html.erb
+++ b/app/views/restaurantes/edit.html.erb
@@ -1,12 +1,3 @@
 <h2>Editando Restaurante</h2>
-
-<%= form_for @restaurante do |f| %>
-Nome: <%= f.text_field :nome %>
-<br/>
-Endereço: <%= f.text_field :endereco %>
-<br/>
-Especialidade: <%= f.text_field :especialidade %>
-<br/>
-<%= f.submit %>
-<% end %>
-<%= link_to 'Voltar', action: 'index' %>
+<%= render partial: "form" %>
+<%= link_to 'Voltar', {action: 'index'}, class: "btn btn-default"  %>
