--- a/app/views/qualificacoes/_form.html.erb
+++ b/app/views/qualificacoes/_form.html.erb
@@ -16,21 +16,27 @@
 <div class="field">
 
 	<% if @qualificacao.cliente %>
-  <%= f.hidden_field 'cliente_id' %>
-<% else %>
-  <p><%= f.label :cliente_id %><br />
-<%= f.collection_select(:cliente_id, @clientes,
-                                    :id, :nome, :prompt => true) %></p>
-<% end %>
+	<%= f.hidden_field 'cliente_id' %>
+	<% else %>
+	<p>
+		<%= f.label :cliente_id %>
+		<br />
+		<%= f.collection_select(:cliente_id, @clientes,
+      :id, :nome, :prompt => true) %>
+	</p>
+	<% end %>
 </div>
 <div class="field">
 	<% if @qualificacao.restaurante %>
-  <%= f.hidden_field 'restaurante_id' %>
-<% else %>
-  <p><%= f.label :restaurante_id %><br />
-  <%= f.collection_select(:restaurante_id, @restaurantes,
-                                          :id, :nome, :prompt => true) %></p>
-<% end %>
+	<%= f.hidden_field 'restaurante_id' %>
+	<% else %>
+	<p>
+		<%= f.label :restaurante_id %>
+		<br />
+		<%= f.collection_select(:restaurante_id, @restaurantes,
+      :id, :nome, :prompt => true) %>
+	</p>
+	<% end %>
 </div>
 <div class="field">
 	<%= f.label :nota %>
@@ -38,9 +44,9 @@
 	<%= f.text_field :nota %>
 </div>
 <div class="field">
-  <%= f.label :valor_gasto %>
-  <br />
-  <%= f.text_field :valor_gasto %>
+	<%= f.label :valor_gasto %>
+	<br />
+	<%= f.text_field :valor_gasto %>
 </div>
 <div class="actions">
 	<%= f.submit %>
