--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -14,6 +14,9 @@
   								<li class="active"><a href="#">Home</a></li>
   								<li><a href="#about">About</a></li>
   								<li><a href="#contact">Contact</a></li>
+                   <li><%= link_to_unless_current("Home", { action: "index" },class:
+                   "active") %></li>
+  <li><%= link_to_unless_current("About Us", { action: "about" }) %></li>
   								<li class="dropdown">
   									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
   									<ul class="dropdown-menu">
