--- a/app/views/qualificacoes/index.html.erb
+++ b/app/views/qualificacoes/index.html.erb
@@ -1,11 +1,12 @@
 <h1>Listing qualificacoes</h1>
 
-<table>
+<table class="table table-bordered">
 	<thead>
 		<tr>
 			<th>Cliente</th>
 			<th>Restaurante</th>
 			<th>Nota</th>
+			<th>Valor</th>
 			<th colspan="3"></th>
 		</tr>
 	</thead>
@@ -16,9 +17,10 @@
 			<td><%= qualificacao.cliente.nome %></td>
 			<td><%= qualificacao.restaurante.nome %></td>
 			<td><%= qualificacao.nota %></td>
-			<td><%= link_to 'Show', qualificacao %></td>
-			<td><%= link_to 'Edit', edit_qualificacao_path(qualificacao) %></td>
-			<td><%= link_to 'Destroy', qualificacao, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+			<td><%= valor_formatado(qualificacao.valor_gasto) %></td>
+			<td><%= link_to 'Show', qualificacao, class: "btn btn-default" %></td>
+			<td><%= link_to 'Edit', edit_qualificacao_path(qualificacao), class: "btn btn-primary" %></td>
+			<td><%= link_to 'Destroy', qualificacao, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
 		</tr>
 		<% end %>
 	</tbody>
