first commit videos galerias de imagens

--- a/app/views/teste/form.html.erb
+++ b/app/views/teste/form.html.erb
@@ -1,8 +1,55 @@
 <h1>Teste#form</h1>
-<p>Find me in app/views/teste/form.html.erb</p>
+<p>
+	Find me in app/views/teste/form.html.erb
+</p>
 <%= @dados %>
 <%= form_tag do %>
 <%= label_tag(:q, "Search for:") %>
 <%= text_field_tag(:q ) %>
 <%= submit_tag("Search", :class => "btn btn-primary" ) %>
 <% end %>
+
+<%= form_for(:model) do |form| %>
+<p>
+	<%= form.label :input %>
+	<%= form.text_field :input, :placeholder => 'Enter text here...' %>
+</p>
+<p>
+	<%= form.label :address, :style => 'float: left' %>
+	<%= form.text_area :address, :rows => 3, :cols => 40 %>
+</p>
+<p>
+	<%= form.label :color %>:
+	<%= form.radio_button :color, 'red' %>
+	<%= form.label :red %>
+	<%= form.radio_button :color, 'yellow' %>
+	<%= form.label :yellow %>
+	<%= form.radio_button :color, 'green' %>
+	<%= form.label :green %>
+</p>
+<p>
+	<%= form.label 'condiment' %>:
+	<%= form.check_box :ketchup %>
+	<%= form.label :ketchup %>
+	<%= form.check_box :mustard %>
+	<%= form.label :mustard %>
+	<%= form.check_box :mayonnaise %>
+	<%= form.label :mayonnaise %>
+</p>
+
+<p>
+	<%= form.label :priority %>:
+	<%= form.select :priority, (1..10) %>
+</p>
+
+<p>
+	<%= form.label :start %>:
+	<%= form.date_select :start %>
+</p>
+
+<p>
+	<%= form.label :alarm %>:
+	<%= form.time_select :alarm %>
+</p>
+<% end %>
+
